--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://elishaebe177:PcNr4FJA5IMknVfE@invoice-management-syst.bgkce.mongodb.net/invoice-management-system?retryWrites=true&w=majority
 
 PORT = 5000
+
+JWT_SECRET=Nevergiveup
